<resources>
    <string name="app_name">CryptoCurrency Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>

    <string name="purchase_value"><u>Purchase value</u></string>
    <string name="estimated_value"><u>Estimated value</u></string>

    <string name="load_csv_file">Load CSV file</string>
    <string name="load_csv_file_canceled">Loading CSV file canceled</string>
    <string name="bittrex_columns_csv">Bittrex CSV columns</string>
    <string name="confirm">Confirm</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="required">Required</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="hint_firstname">firstname</string>
    <string name="hint_lastname">lastname</string>

    <string name="latest_purchases">Latest purchases</string>

    <string name="default_notification_channel_id" translatable="false">crypto-curr-exch</string>
</resources>
