<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kontus.cryptocurrencymanager.activities.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/firebase_lockup_400" />

        <LinearLayout
            android:id="@+id/layout_email_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/field_logged_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:maxLines="1" />

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:id="@+id/field_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:hint="@string/hint_firstname"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <EditText
                android:id="@+id/field_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:hint="@string/hint_lastname"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_email_password"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/button_sign_out"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
